--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     showNotification("✅ Đăng nhập thành công!", "bg-green-500");
                     sendEmail("Đăng nhập thành công", username, password);
                     localStorage.setItem("loggedInUser", username); // Lưu tên người dùng đăng nhập
-                    setTimeout(() => window.location.href = "portal.html", 1000);
+                    setTimeout(() => window.location.href = "shop.html", 1000);
                 }
             });
 
